# webssh_rs

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml
.claude/agents/: rust-api-implementer.md  ui-implementation-assistant.md
.github/: copilot-instructions.md
client/: TODO.md  index.html  index.js  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  typing.ts
client/src/: App.css  App.tsx  api.ts  i18n.js  index.tsx  store.ts  template.html  terminal.css  terminal.js
client/src/api/: index.ts  sftp.ts  target.ts
client/src/helpers/: DragFilesReader.ts  fileSave.ts  file_uri.ts  flowFormatter.ts  getSftpLsMapFiles.ts  openNativeFileSelector.js  openNativeFileSelector.ts  open_native_file_selector.js  path.js  platform.js  read_file_as_text.ts  simple_queue_run.js  speed_counter.ts  validate_cert_file.ts
client/src/types/: index.d.ts  index.ts
scripts/: build.mjs  dev.mjs
server/: Cargo.toml
server/src/: lib.rs  main.rs  ssh_session_pool.rs  svc_connection.rs  svc_target.rs  svc_term.rs
server/src/apis/: mod.rs  sftp.rs  ssh.rs  ssh_connection.rs  target.rs
server/src/apis/handlers/: mod.rs
server/src/apis/handlers/sftp/: cp.rs  download.rs  home.rs  ls.rs  mkdir.rs  mod.rs  rename.rs  rm.rs  rm_rf.rs  stat.rs  upload.rs
server/src/apis/handlers/ssh/: exec.rs  mod.rs  terminal.rs
server/src/apis/handlers/ssh_connection/: mod.rs
server/src/consts/: services_err_code.rs
server/src/entities/: target.rs
server/src/migrations/: m000001_init_db.rs  m000002_win_target.rs  mod.rs
server/src/services/: mod.rs  sftp.rs  ssh.rs  target.rs  term.rs
server/src/services/handlers/: mod.rs  ssh_exec.rs  ssh_terminal.rs
server/src/services/handlers/sftp/: cp.rs  download.rs  home.rs  ls.rs  mkdir.rs  mod.rs  rename.rs  rm.rs  rm_rf.rs  stat.rs  upload.rs
server/src/tests/: sftp_server.rs
src-client/: TODO.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
src-client/src/: App.css  App.tsx  i18n.js  index.tsx  template.html  terminal.js
src-client/src/api/: fs.ts  index.ts  transfer.ts
src-client/src/helpers/: DragFilesReader.ts  PromiseWithResolvers.ts  (+8 more)
src-server/: Cargo.toml  TODO.md  redoc.html
src-server/src/: api_doc.rs  config.rs  lib.rs  ssh_session_pool.rs  target_ssh_service.rs
src-server/src/apis/: mod.rs  ssh.rs  target.rs
src-server/src/apis/fs/: dto.rs  handlers.rs  mod.rs  service.rs
src-server/src/apis/handlers/: mod.rs
src-server/src/apis/handlers/sftp/: cp.rs  download.rs  home.rs  ls.rs  mkdir.rs  mod.rs  rename.rs  rm.rs  rm_rf.rs  stat.rs  upload.rs
src-server/src/apis/handlers/ssh/: exec.rs  mod.rs  terminal.rs
src-server/src/apis/handlers/ssh_connection/: expire.rs  list.rs  mod.rs
src-server/src/apis/sftp/: dto.rs  handlers.rs  mod.rs  service.rs
src-server/src/apis/ssh/: dto.rs  handlers.rs  mod.rs  service.rs
src-server/src/apis/ssh_connection/: dto.rs  handlers.rs  mod.rs  service.rs
src-server/src/apis/transfer/: dto.rs  handlers.rs  mod.rs  ranges.rs  runner.rs  service.rs  sftp_uri.rs
src-server/src/consts/: mod.rs  services_err_code.rs
src-server/src/entities/: mod.rs  ssh_known_host.rs  target.rs  transfer_task.rs
src-server/src/migrations/: m000003_ssh_known_host.rs  m000004_transfer_task.rs  m000005_drop_transfer_task_source_uri.rs  m000006_pin_one_host_key.rs  mod.rs
src-server/src/repositories/: mod.rs  target.rs
src-server/src/sftp_client/: download.rs  mod.rs  transfer.rs  upload.rs
src-server/src/ssh_connection_pool/: connection.rs  connector.rs  error.rs  known_hosts.rs  lease.rs  mod.rs  target_connection_pool.rs  tests.rs
src-server/src/tests/: mod.rs  sftp_server.rs
src-tauri/: tauri.conf.json
(+117 files in other folders)
