[package]
name = "webssh_rs_server"
version = "0.1.0"
edition = "2024"
default-run = "webssh_rs_server"

[[bin]]
name = "webssh_rs_server"
path = "src/main.rs"

[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[[bin]]
name = "webssh-transfer-cli"
path = "src/bin/webssh_transfer_cli.rs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.8.3", features = ["macros"] }
bytes = "1.12.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
futures-util = "0.3.31"
hex = "0.4.3"
nanoid = "0.4.0"
russh = { version = "0.62.2", default-features = false, features = [
    "flate2",
    "rsa",
    "ring",
] }
sea-orm = { version = "1.1.10", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.10"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.15.0"
serde_repr = "0.1.20"
sha2 = "0.10.9"
smallvec = "1.15.0"
socketioxide = { version = "0.17.0", features = [
    "tracing",
    "state",
    "extensions",
] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rand = "0.10.2"
russh-sftp = "2.1.1"
